--- a/Edkul/app/src/main/res/layout/content_welcomepage.xml
+++ b/Edkul/app/src/main/res/layout/content_welcomepage.xml
@@ -17,23 +17,26 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/welcomePage"
+        android:textSize="30sp"
         android:id="@+id/textView"
+        android:textAlignment="center"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="61dp" />
+        android:layout_alignRight="@+id/joinNow"
+        android:layout_alignEnd="@+id/joinNow" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/studentName"
         android:hint="@string/loginEmail"
         android:width="300dp"
+        android:textAlignment="center"
         android:background="@android:color/white"
         android:textColorHint="@android:color/holo_blue_light"
         android:padding="5dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="75dp"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
 
@@ -42,25 +45,30 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/studentEmail"
         android:hint="@string/loginPassword"
         android:width="300dp"
+        android:textAlignment="center"
         android:background="@android:color/white"
         android:textColorHint="@android:color/holo_blue_light"
         android:padding="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_above="@+id/button"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:layout_marginTop="20dp"
+        android:layout_above="@+id/loginButton"
+        android:layout_alignLeft="@+id/studentName"
+        android:layout_alignStart="@+id/studentName" />
 
     <Button
         android:text="@string/loginButton"
-        android:id="@+id/button"
+        android:id="@+id/loginButton"
         android:textStyle="bold"
-        android:padding="5dp"
-        android:layout_width="100dp"
+        android:padding="8dp"
+        android:textSize="20sp"
+        android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_above="@+id/textView2"
+        android:textAlignment="center"
+        android:textColor="#33b5e5"
+        android:layout_marginTop="15dp"
+        android:layout_above="@+id/fPass"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -69,7 +77,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/forgotPass"
         android:textColor="#000000"
-        android:id="@+id/textView2"
+        android:textAlignment="center"
+        android:id="@+id/fPass"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
@@ -80,10 +89,13 @@
         android:text="@string/notonEdkul"
         android:id="@+id/textView3"
         android:textColor="#000000"
-        android:layout_marginTop="56dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+        android:textSize="22sp"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="58dp"
+        android:textAlignment="center"
+        android:layout_below="@+id/fPass"
+        android:layout_alignLeft="@+id/studentEmail"
+        android:layout_alignStart="@+id/studentEmail" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -92,7 +104,9 @@
         android:text="@string/joinNow"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:id="@+id/textView4"
+        android:id="@+id/joinNow"
+        android:textSize="22sp"
+        android:textAlignment="center"
         android:layout_alignTop="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:layout_toEndOf="@+id/textView3" />
