--- a/Edkul/app/src/main/res/layout/content_student__signup.xml
+++ b/Edkul/app/src/main/res/layout/content_student__signup.xml
@@ -31,13 +31,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="@string/studentName"
+        android:hint="@string/studentName"
         android:ems="10"
-        android:textColor="#33b5e5"
+        android:textColorHint="@android:color/holo_blue_light"
         android:textSize="25sp"
         android:width="300dp"
         android:padding="5dp"
-        android:id="@+id/studentName"
+        android:id="@+id/parentStudent"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -54,7 +54,7 @@
         android:textSize="25sp"
         android:id="@+id/studentEmail"
         android:hint="@string/studentEmail"
-        android:layout_below="@+id/studentName"
+        android:layout_below="@+id/parentStudent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="15dp"/>
@@ -110,12 +110,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="@string/studentInstitute"
+        android:hint="@string/studentInstitute"
         android:ems="10"
         android:width="300dp"
         android:textSize="25sp"
         android:padding="5dp"
-        android:textColor="#33b5e5"
+        android:layout_marginTop="15dp"
+        android:textColorHint="@android:color/holo_blue_light"
         android:id="@+id/studentInstitute"
         android:layout_below="@+id/studentContact"
         android:layout_alignParentLeft="true"
@@ -126,7 +127,7 @@
         android:layout_height="wrap_content"
         android:text="@string/submitStudent"
         android:id="@+id/submitStudent"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="75dp"
         android:textSize="25sp"
         android:onClick="addButtonClicked"
         android:background="@drawable/custom_button"
