--- a/Edkul/app/src/main/res/layout/content_parent__signup.xml
+++ b/Edkul/app/src/main/res/layout/content_parent__signup.xml
@@ -27,14 +27,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="@string/parentName"
+        android:hint="@string/parentName"
         android:ems="10"
-        android:textColor="#33b5e5"
+        android:textColorHint="@android:color/holo_blue_light"
         android:width="300dp"
         android:textSize="25sp"
         android:padding="5dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/editText13"
+        android:layout_marginTop="15dp"
+        android:id="@+id/parentName"
         android:layout_below="@+id/textView7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -50,8 +50,8 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:hint="@string/parentEmail"
-        android:id="@+id/editText14"
-        android:layout_below="@+id/editText13"
+        android:id="@+id/parentEmail"
+        android:layout_below="@+id/parentName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -66,8 +66,8 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:hint="@string/parentPassword"
-        android:id="@+id/editText15"
-        android:layout_below="@+id/editText14"
+        android:id="@+id/parentPassword"
+        android:layout_below="@+id/parentEmail"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -82,8 +82,8 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:hint="@string/parentCPassword"
-        android:id="@+id/editText16"
-        android:layout_below="@+id/editText15"
+        android:id="@+id/parentCpassword"
+        android:layout_below="@+id/parentPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -98,8 +98,8 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:hint="@string/parentContact"
-        android:id="@+id/editText17"
-        android:layout_below="@+id/editText16"
+        android:id="@+id/parentContact"
+        android:layout_below="@+id/parentCpassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -107,15 +107,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="@string/parent_studentName"
+        android:hint="@string/parent_studentName"
         android:ems="10"
         android:layout_marginTop="15dp"
-        android:textColor="#33b5e5"
+        android:textColorHint="@android:color/holo_blue_light"
         android:width="300dp"
         android:textSize="25sp"
         android:padding="5dp"
-        android:id="@+id/editText18"
-        android:layout_below="@+id/editText17"
+        android:id="@+id/parentStudent"
+        android:layout_below="@+id/parentContact"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -123,15 +123,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="@string/instituteName"
+        android:hint="Institute"
         android:ems="10"
         android:layout_marginTop="15dp"
-        android:textColor="#33b5e5"
+        android:textColorHint="@android:color/holo_blue_light"
         android:width="300dp"
         android:textSize="25sp"
         android:padding="5dp"
-        android:id="@+id/editText19"
-        android:layout_below="@+id/editText18"
+        android:id="@+id/parentInstitute"
+        android:layout_below="@+id/parentStudent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/parentSubmit"
+        android:id="@+id/submitButton3"
+        android:layout_marginTop="25dp"
+        android:textSize="25sp"
+        android:background="@drawable/custom_button"
+        android:layout_below="@+id/parentInstitute"
+        android:layout_alignRight="@+id/textView7"
+        android:layout_alignEnd="@+id/textView7" />
 </RelativeLayout>
