Match the login info with the database

--- a/Edkul/app/src/main/res/layout/content_recover_password.xml
+++ b/Edkul/app/src/main/res/layout/content_recover_password.xml
@@ -10,8 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/pic3"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.edkul.vimal.edkul.RecoverPassword"
-    tools:showIn="@layout/activity_recover_password">
+    tools:context="com.edkul.vimal.edkul.RecoverPassword">
 
     <TextView
         android:layout_width="wrap_content"
