--- a/Edkul/app/src/main/res/layout/content_welcomepage.xml
+++ b/Edkul/app/src/main/res/layout/content_welcomepage.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/parentStudent"
+        android:id="@+id/userName"
         android:hint="@string/loginEmail"
         android:width="300dp"
         android:textAlignment="center"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/studentEmail"
+        android:id="@+id/passWord"
         android:hint="@string/loginPassword"
         android:width="300dp"
         android:textAlignment="center"
@@ -54,8 +54,8 @@
         android:padding="5dp"
         android:layout_marginTop="20dp"
         android:layout_above="@+id/loginButton"
-        android:layout_alignLeft="@+id/parentStudent"
-        android:layout_alignStart="@+id/parentStudent" />
+        android:layout_alignLeft="@+id/userName"
+        android:layout_alignStart="@+id/userName" />
 
     <Button
         android:text="@string/loginButton"
@@ -94,8 +94,8 @@
         android:layout_marginTop="58dp"
         android:textAlignment="center"
         android:layout_below="@+id/fPass"
-        android:layout_alignLeft="@+id/studentEmail"
-        android:layout_alignStart="@+id/studentEmail" />
+        android:layout_alignLeft="@+id/passWord"
+        android:layout_alignStart="@+id/passWord" />
 
     <TextView
         android:layout_width="wrap_content"
