--- a/Edkul/app/src/main/res/layout/content_forgot_password.xml
+++ b/Edkul/app/src/main/res/layout/content_forgot_password.xml
@@ -10,8 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/pic9"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.edkul.vimal.edkul.ForgotPassword"
-    tools:showIn="@layout/activity_forgot_password">
+    tools:context="com.edkul.vimal.edkul.ForgotPassword">
 
     <TextView
         android:layout_width="wrap_content"
