--- a/Edkul/app/src/main/res/layout/content_join__as_.xml
+++ b/Edkul/app/src/main/res/layout/content_join__as_.xml
@@ -9,8 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.edkul.vimal.edkul.Join_AS_A"
-    tools:showIn="@layout/activity_join__as_">
+    tools:context="com.edkul.vimal.edkul.Join_AS_A">
 
     <TextView
         android:layout_width="wrap_content"
