--- a/Edkul/app/src/main/res/layout/content_parent__signup.xml
+++ b/Edkul/app/src/main/res/layout/content_parent__signup.xml
@@ -10,8 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/pic8"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.edkul.vimal.edkul.Parent_Signup"
-    tools:showIn="@layout/activity_parent__signup">
+    tools:context="com.edkul.vimal.edkul.Parent_Signup">
 
     <TextView
         android:layout_width="wrap_content"
@@ -114,7 +113,7 @@
         android:width="300dp"
         android:textSize="25sp"
         android:padding="5dp"
-        android:id="@+id/parentStudent"
+        android:id="@+id/userName"
         android:layout_below="@+id/parentContact"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -131,7 +130,7 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:id="@+id/parentInstitute"
-        android:layout_below="@+id/parentStudent"
+        android:layout_below="@+id/userName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
