--- a/Edkul/app/src/main/res/layout/content_student__signup.xml
+++ b/Edkul/app/src/main/res/layout/content_student__signup.xml
@@ -11,7 +11,6 @@
     android:background="@drawable/pic5"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.edkul.vimal.edkul.Student_Signup"
-    tools:showIn="@layout/activity_student__signup"
     android:id="@+id/studentSignup">
 
     <TextView
@@ -37,11 +36,11 @@
         android:textSize="25sp"
         android:width="300dp"
         android:padding="5dp"
-        android:id="@+id/parentStudent"
+        android:id="@+id/userName"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="20dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -52,12 +51,12 @@
         android:width="300dp"
         android:padding="5dp"
         android:textSize="25sp"
-        android:id="@+id/studentEmail"
+        android:id="@+id/passWord"
         android:hint="@string/studentEmail"
-        android:layout_below="@+id/parentStudent"
+        android:layout_below="@+id/userName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -69,9 +68,9 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:id="@+id/studentPassword"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:hint="@string/studentPassword"
-        android:layout_below="@+id/studentEmail"
+        android:layout_below="@+id/passWord"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     <EditText
@@ -84,9 +83,9 @@
         android:textSize="25sp"
         android:padding="5dp"
         android:id="@+id/studentCpassword"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="20dp"
         android:hint="@string/studentcPassword"
-        android:layout_below="@+id/studentEmail"
+        android:layout_below="@+id/studentPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -101,7 +100,7 @@
         android:hint="@string/studentContact"
         android:textColorHint="@android:color/holo_blue_light"
         android:id="@+id/studentContact"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@+id/studentCpassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -115,7 +114,7 @@
         android:width="300dp"
         android:textSize="25sp"
         android:padding="5dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:textColorHint="@android:color/holo_blue_light"
         android:id="@+id/studentInstitute"
         android:layout_below="@+id/studentContact"
@@ -127,11 +126,11 @@
         android:layout_height="wrap_content"
         android:text="@string/submitStudent"
         android:id="@+id/submitStudent"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="20dp"
         android:textSize="25sp"
         android:onClick="addButtonClicked"
         android:background="@drawable/custom_button"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/studentContact" />
+        android:layout_below="@+id/studentInstitute" />
 
 </RelativeLayout>
