--- a/Edkul/app/src/main/res/layout/content_user_profile.xml
+++ b/Edkul/app/src/main/res/layout/content_user_profile.xml
@@ -11,23 +11,38 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.edkul.vimal.edkul.UserProfile">
 
+    <ImageView
+        android:id="@+id/test_image"
+        android:src="@drawable/pic13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/profile"
+        android:text="Profile"
         android:id="@+id/textView9"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="49dp"
-        android:layout_marginEnd="49dp" />
-    <ImageView
-        android:id="@+id/test_image"
-        android:src="@drawable/pic10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_gravity="left"
+        android:layout_marginTop="20dp"
+        android:textSize="22sp"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:textColor="#33b5e5"
+        android:layout_alignTop="@+id/test_image"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="My Dashboard"
+        android:textSize="25sp"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/test_image"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
