--- a/Edkul/app/src/main/res/layout/activity_subscribe__course.xml
+++ b/Edkul/app/src/main/res/layout/activity_subscribe__course.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.edkul.vimal.edkul.Subscribe_Course">
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,7 +17,8 @@
         android:text="@string/subscribeCourse"
         android:id="@+id/subscribeCourse"
         android:textSize="30sp"
-        android:layout_marginTop="10dp"
+        android:textColor="#33b5e5"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -19,12 +26,12 @@
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Select Institute Name"
+        android:text="@string/selectInstitute"
         android:layout_below="@+id/subscribeCourse"
-        android:layout_margin="5dp"
+        android:layout_marginTop="30dp"
         android:padding="10dp"
-        android:textSize="20dp"
-        android:background="#ff5500"
+        android:textSize="20sp"
+        android:background="#2a5a85"
         android:textColor="#fff"/>
     <Spinner
         android:id="@+id/spinner1"
@@ -32,6 +39,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
-        android:popupBackground="#FFFF99"/>
+        android:popupBackground="#23c5e3"/>
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Select Course Name"
+        android:layout_below="@+id/spinner1"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:background="#2a5a85"
+        android:textColor="#fff"/>
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView2"
+        android:popupBackground="#23c5e3"/>
 </RelativeLayout>
