--- a/Edkul/app/src/main/res/layout/content_subscribe__course.xml
+++ b/Edkul/app/src/main/res/layout/content_subscribe__course.xml
@@ -14,64 +14,50 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/subscribeCourse"
-        android:id="@+id/textView17"
+        android:id="@+id/subscribeCourse"
         android:textSize="30sp"
+        android:textColor="#33b5e5"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/instituteName"
-        android:textSize="30sp"
-        android:layout_alignParentTop="true"
-        android:id="@+id/textView18"
-        android:layout_marginTop="117dp"
-        android:layout_below="@+id/textView17"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:text="@string/selectInstitute"
+        android:layout_below="@+id/subscribeCourse"
+        android:layout_marginTop="30dp"
+        android:padding="10dp"
+        android:textSize="20sp"
+        android:background="#2a5a85"
+        android:textColor="#fff"/>
     <Spinner
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:id="@+id/instituteSpinner"
-        android:spinnerMode="dropdown"
-        android:textAlignment="center"
-        android:layout_alignBottom="@+id/textView18"
-        android:layout_alignLeft="@+id/courseSpinner"
-        android:layout_alignStart="@+id/courseSpinner" />
+        android:id="@+id/spinner1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView1"
+        android:popupBackground="#23c5e3"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/courseName"
-        android:textSize="30sp"
-        android:id="@+id/textView19"
-        android:layout_marginTop="0dp"
-        android:layout_below="@+id/textView18"/>
-
+        android:text="Select Course Name"
+        android:layout_below="@+id/spinner1"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:background="#2a5a85"
+        android:textColor="#fff"/>
     <Spinner
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:id="@+id/courseSpinner"
-        android:spinnerMode="dropdown"
-        android:textAlignment="center"
-        android:layout_alignBottom="@+id/textView19"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/spinner2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/subscribeText"
-        android:id="@+id/subscribeButton"
-        android:layout_below="@+id/textView19"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="113dp"
-        android:textSize="25sp"
-        android:background="@drawable/custom_button"/>
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView2"
+        android:popupBackground="#23c5e3"/>
+
 </RelativeLayout>
