--- a/Edkul/app/src/main/res/layout/content_welcomepage.xml
+++ b/Edkul/app/src/main/res/layout/content_welcomepage.xml
@@ -17,12 +17,17 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/welcomePage"
+        style="@style/AudioFileInfoOverlayText"
         android:textSize="30sp"
         android:id="@+id/textView"
+        android:layout_marginTop="30dp"
         android:textAlignment="center"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/joinNow"
-        android:layout_alignEnd="@+id/joinNow" />
+        android:layout_alignEnd="@+id/joinNow"
+        android:shadowDx="3"
+        android:shadowDy="-3"
+        android:shadowRadius="1.5"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -36,7 +41,7 @@
         android:background="@android:color/white"
         android:textColorHint="@android:color/holo_blue_light"
         android:padding="5dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="45dp"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
 
@@ -76,6 +81,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/forgotPass"
+        style="@style/AudioFileInfoOverlayText"
         android:textColor="#000000"
         android:textAlignment="center"
         android:id="@+id/fPass"
@@ -89,9 +95,10 @@
         android:text="@string/notonEdkul"
         android:id="@+id/textView3"
         android:textColor="#000000"
+        style="@style/AudioFileInfoOverlayText"
         android:textSize="22sp"
         android:layout_marginLeft="33dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="125dp"
         android:textAlignment="center"
         android:layout_below="@+id/fPass"
         android:layout_alignLeft="@+id/passWord"
@@ -103,6 +110,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/joinNow"
         android:textStyle="bold"
+        style="@style/AudioFileInfoOverlayText"
         android:textColor="#000000"
         android:id="@+id/joinNow"
         android:textSize="22sp"
